Support editor content change notification, URI property and correctly align toolbar items (#2327)
* Support editor content change notification, URI property and correctly align toolbar items

* Better fix for toolbar orientation, plus minor editor fixes

--- a/src/sql/parts/modelComponents/toolbarLayout.css
+++ b/src/sql/parts/modelComponents/toolbarLayout.css
@@ -31,10 +31,9 @@
 }
 
 .modelview-toolbar-container .modelview-toolbar-title {
-	padding-right: 5px;
+	padding: 4px;
 	font-size: 14px;
 	cursor: pointer;
-	margin: auto;
 }
 
 .modelview-toolbar-container .modelview-toolbar-component select,
